--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Web-Calculator</title>
+  <link href="dist/css/style.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+  <div id="main">
+    <div id="titlecalc">
+      <p>Web-Calculator</p>
+    </div>
+  </div>
+
   
+
+  <script type="text/javascript" src="dist/js/main.min.js" ></script>
 </body>
 </html>
