--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web-Calculator</title>
-  <link href="dist/css/style.min.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-  <div id="main">
-    <div id="titlecalc">
-      <p>Web-Calculator</p>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web-Calculator</title>
+    <link href="dist/css/style.min.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <div id="main">
+      <div id="titlecalc">
+        <p>Web-Calculator</p>
+      </div>
+
+      <div id="displayer">
+        <textarea name="textarea" maxlength="15"></textarea>
+      </div>
     </div>
-  </div>
 
-  
+    <!-- <div id="calc-buttons">
+      <button></button>
+    </div> -->
 
-  <script type="text/javascript" src="dist/js/main.min.js" ></script>
-</body>
+    <script type="text/javascript" src="dist/js/main.min.js" ></script>
+  </body>
 </html>
