--- a/index.html
+++ b/index.html
@@ -5,23 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web-Calculator</title>
+    <link rel="shortcut icon" href="icon.ico">
     <link href="dist/css/style.min.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="main">
       <div id="titlecalc">
         <p>Web-Calculator</p>
-      </div>
+      </div><hr>
 
       <div id="displayer">
-        <textarea name="textarea" maxlength="15"></textarea>
+        <textarea id="displayercalc" maxlength="15"></textarea>
+      </div>
+
+      <div id="mainbuttonsnumber">
+        <button class="buttonsnumber" onclick="numberadd(event)">1</button>
+        <button class="buttonsnumber" onclick="numberadd(event)">2</button>
+        <button class="buttonsnumber" onclick="numberadd(event)">3</button>
+        <button class="buttonsnumber" onclick="numberadd(event)">4</button>
+        <button class="buttonsnumber" onclick="numberadd(event)">5</button>
+        <button class="buttonsnumber" onclick="numberadd(event)">6</button>
+        <button class="buttonsnumber" onclick="numberadd(event)">7</button>
+        <button class="buttonsnumber" onclick="numberadd(event)">8</button>
+        <button class="buttonsnumber" onclick="numberadd(event)">9</button>
+      </div>
+
+      <div id="mainbuttonscalculations">
+        <button class="buttonscalculations">+</button>
+        <button class="buttonscalculations">-</button>
+        <button class="buttonscalculations">*</button>
+        <button class="buttonscalculations">/</button>
+        <button class="buttonscalculations">C</button>
+        <button class="buttonscalculations">=</button>
       </div>
     </div>
-
-    <!-- <div id="calc-buttons">
-      <button></button>
-    </div> -->
-
-    <script type="text/javascript" src="dist/js/main.min.js" ></script>
+    
+    <script type="text/javascript" src="dist/js/main.min.js"></script>
   </body>
 </html>
